# PythonAvlTree

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  build.sh  module.html.jinja2  pyproject.toml
.github/workflows/: build.yml  documentation.yml  publish.yml  pypi.yml
build_scripts/: build.sh
src/avltree/: __init__.py  _avl_tree.py  _avl_tree_element.py  _avl_tree_key.py  _avl_tree_node.py
src/pythontemplate/: __init__.py  main.py
tests/: __init__.py  test_avl_tree.py  test_main.py
