[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "avltree"
version = "1.0.0"
description = "Lightweight, pure-python AVL tree"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [{name = "Charles Andrews", email = "cfandrews@outlook.com"}]
dependencies = []

[project.urls]
Homepage = "https://github.com/cfandrews/PythonAvlTree"

[project.optional-dependencies]
build = [
    "isort==5.12.0",
    "ruff==0.1.3",
    "mypy==1.6.1",
    "pytest==7.4.3",
    "assertpy==1.1",
    "pytest-cov==4.1.0",
    "pre-commit==3.5.0",
    "build==1.0.3",
]

[tool.ruff]
select = ["ALL"]
ignore = [
    "ANN101", # Missing type annotation for `self` in method
    "E203",   # Whitespace before ':'
]
preview = true

[tool.ruff.pydocstyle]
convention = "google"

[tool.isort]
profile = "black"
src_paths = ["src", "tests"]

[tool.pytest.ini_options]
addopts = "--cov=avltree --cov-fail-under=100 --cov-report=term-missing tests"

[tool.mypy]
files = ["src", "tests"]
strict = true
pretty = true

[[tool.mypy.overrides]]
module = "assertpy"
ignore_missing_imports = true