[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "avltree"
version = "1.1.2"
description = "Lightweight, pure-python AVL tree"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [{name = "Charles Andrews", email = "cfandrews@outlook.com"}]
dependencies = []

[project.urls]
Homepage = "https://github.com/cfandrews/PythonAvlTree"

[project.optional-dependencies]
build = [
    "pre-commit==3.5.0",
    "isort==5.12.0",
    "ruff==0.1.3",
    "mypy==1.6.1",
    "pytest==7.4.3",
    "assertpy==1.1",
    "pytest-cov==4.1.0",
    "build==1.0.3",
    "pdoc==14.1.0"
]

[tool.ruff]
select = ["ALL"]
ignore = [
    "ANN101", # Missing type annotation for `self` in method
    "E203",   # Whitespace before ':'
]
preview = true
cache-dir = "./build/ruff"

[tool.ruff.pydocstyle]
convention = "google"

[tool.isort]
profile = "black"
src_paths = ["src", "tests"]

[tool.pytest.ini_options]
addopts = "--cov=avltree --cov-fail-under=100 --cov-report=term-missing tests"
cache_dir = "./build/pytest"

[tool.mypy]
files = ["src", "tests"]
strict = true
pretty = true

[[tool.mypy.overrides]]
module = "assertpy"
ignore_missing_imports = true

[tool.coverage.report]
exclude_also = [
    "break", # https://github.com/nedbat/coveragepy/issues/772
]

[tool.coverage.run]
data_file = "./build/coverage"